# cloudfn

./: LICENSE  pyproject.toml  release.py
cloudfn/aws/: deploy.py  event.py  layer_builder.py  local.py  model.py  util.py
cloudfn/core/: cli.py  common.py  data.py  io.py  util.py
